<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DrawerActivity">

    <item
        android:id="@+id/action_grid_size"
        android:icon="@drawable/ic_grid_size_white_24dp"
        android:title="@string/action_grid_size"
        app:showAsAction="ifRoom|withText">
        <menu>
            <group
                android:id="@+id/group_grid_size"
                android:checkableBehavior="single"
                tools:ignore="HardcodedText">
                <item
                    android:id="@+id/action_grid_size_1"
                    android:title="@string/grid_size_1" />
                <item
                    android:id="@+id/action_grid_size_2"
                    android:title="@string/grid_size_2" />
                <item
                    android:id="@+id/action_grid_size_3"
                    android:title="@string/grid_size_3" />
                <item
                    android:id="@+id/action_grid_size_4"
                    android:title="@string/grid_size_4" />
                <item
                    android:id="@+id/action_grid_size_5"
                    android:title="@string/grid_size_5" />
                <item
                    android:id="@+id/action_grid_size_6"
                    android:title="@string/grid_size_6" />
                <item
                    android:id="@+id/action_grid_size_7"
                    android:title="@string/grid_size_7" />
                <item
                    android:id="@+id/action_grid_size_8"
                    android:title="@string/grid_size_8" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_sort_order"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/action_sort_order"
        app:showAsAction="ifRoom">
        <menu></menu>
    </item>
</menu>