<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_layout_type"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_layout_normal"
            android:title="@string/normal" />
        <item
            android:id="@+id/action_layout_card"
            android:title="@string/card" />
        <item
            android:id="@+id/action_layout_colored_card"
            android:title="@string/card_color_style" />
        <item
            android:id="@+id/action_layout_circular"
            android:title="@string/circular" />
        <item
            android:id="@+id/action_layout_image"
            android:title="@string/image" />
        <item
            android:id="@+id/action_layout_gradient_image"
            android:title="@string/image_gradient" />
    </group>
</menu>