<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_shuffle_playlist"
        android:icon="@drawable/ic_shuffle_white_24dp"
        android:title="@string/action_shuffle_playlist"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_play"
        android:title="@string/action_play"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_play_next"
        android:title="@string/action_play_next"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_to_current_playing"
        android:title="@string/action_add_to_playing_queue"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_to_playlist"
        android:title="@string/action_add_to_playlist" />
    <item
        android:id="@+id/action_save_playlist"
        android:title="@string/save_playlist_title"
        app:showAsAction="never" />

</menu>