<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Hemanth Savarala.
  ~
  ~ Licensed under the GNU General Public License v3
  ~
  ~ This is free software: you can redistribute it and/or modify it under
  ~ the terms of the GNU General Public License as published by
  ~  the Free Software Foundation either version 3 of the License, or (at your option) any later version.
  ~
  ~ This software is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_song_sort_order_asc"
        android:title="@string/sort_order_a_z" />
    <item
        android:id="@+id/action_song_sort_order_desc"
        android:title="@string/sort_order_z_a" />
    <item
        android:id="@+id/action_song_sort_order_artist"
        android:title="@string/sort_order_artist" />
    <item
        android:id="@+id/action_song_sort_order_album"
        android:title="@string/sort_order_album" />
    <item
        android:id="@+id/action_song_sort_order_date"
        android:title="@string/sort_order_date" />
    <item
        android:id="@+id/action_song_sort_order_year"
        android:title="@string/sort_order_year" />
    <item
        android:id="@+id/action_song_sort_order_composer"
        android:title="@string/sort_order_composer" />
</menu>