<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreference
        android:key="changelog"
        app:iconSpaceReserved="false"
        android:summary="@string/changelog_summary"
        android:title="@string/changelog" />

    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreference
        android:key="app_version"
        android:summary="0.0.0"
        app:iconSpaceReserved="false"
        android:title="@string/version" />

    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreference
        android:key="open_source"
        app:iconSpaceReserved="false"
        android:summary="@string/pref_summary_open_source_licences"
        android:title="@string/pref_title_open_source_licences" />

    <code.name.monkey.appthemehelper.common.prefs.supportv7.ATEPreference
        android:key="about"
        app:iconSpaceReserved="false"
        android:summary="@string/pref_summary_about"
        android:title="@string/action_about" />

</androidx.preference.PreferenceScreen>