<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Hemanth Savarala.
  ~
  ~ Licensed under the GNU General Public License v3
  ~
  ~ This is free software: you can redistribute it and/or modify it under
  ~ the terms of the GNU General Public License as published by
  ~  the Free Software Foundation either version 3 of the License, or (at your option) any later version.
  ~
  ~ This software is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_grid_size_1"
        android:title="@string/grid_size_1" />
    <item
        android:id="@+id/action_grid_size_2"
        android:title="@string/grid_size_2" />
    <item
        android:id="@+id/action_grid_size_3"
        android:title="@string/grid_size_3" />
    <item
        android:id="@+id/action_grid_size_4"
        android:title="@string/grid_size_4" />
</menu>